--- a/vignettes/Framingham_heart_study.Rmd
+++ b/vignettes/Framingham_heart_study.Rmd
@@ -12,22 +12,22 @@ vignette: >
 In this tutorial, we re-do the analysis from two previous publications that use the same data set. The data set contains the heart disease status for a number of patients, along with repeated measurements of their systolic blood pressure and their smoking status. The data is also included in the package, simply type `?framingham` for more details.
 
 
-```r
+``` r
 library(inlamemi)
 library(INLA)
 library(ggplot2)
 ```
 
 
-```r
+``` r
 head(framingham)
-#>   disease         sbp1        sbp2 smoking         sbp
-#> 1       0  0.043556319 -0.24144440       0 -0.09894404
-#> 2       0 -0.088249125 -0.03871185       1 -0.06348049
-#> 3       0  0.063634980  0.02971774       1  0.04667636
-#> 4       0 -0.331791943 -0.44704230       1 -0.38941712
-#> 5       0  0.006502333 -0.09760337       1 -0.04555052
-#> 6       0  0.124884993  0.09793482       0  0.11140991
+#>   disease         sbp1        sbp2 smoking
+#> 1       0  0.043556319 -0.24144440       0
+#> 2       0 -0.088249125 -0.03871185       1
+#> 3       0  0.063634980  0.02971774       1
+#> 4       0 -0.331791943 -0.44704230       1
+#> 5       0  0.006502333 -0.09760337       1
+#> 6       0  0.124884993  0.09793482       0
 ```
 
 The two publications are [Bayesian analysis of measurement error models using INLA, Muff et al (2015)](https://arxiv.org/abs/1302.3065) and [Reverse attenuation in interaction terms due to covariate measurement error, Muff & Keller (2015)](https://doi.org/10.1002/bimj.201400157).
@@ -65,7 +65,7 @@ where $u_i^{1}, u_i^{2} \sim N(0, \tau_u)$ are the measurement error terms.
 We can then call the `fit_inlamemi` function directly with the above formulas for the model of interest and imputation model. Also note the repeated measurements argument, which must be set to `TRUE` to ensure that the model is specified correctly. We give the precision for the error term of the measurement error model a \texttt{Gamma(100, 1)} prior, and the error term for the imputation model a \texttt{Gamma(10, 1)} prior. By default in R-INLA, the fixed effects are given Gaussian priors with mean $0$ and precision $0.001$. We re-assign the precisions to be $0.01$, but keep the means at 0 (therefore they are not specified in the `control.fixed` argument).
 
 
-```r
+``` r
 framingham_model <- fit_inlamemi(formula_moi = disease ~ sbp + smoking,
                                formula_imp = sbp ~ smoking,
                                family_moi = "binomial", 
@@ -87,7 +87,7 @@ framingham_model <- fit_inlamemi(formula_moi = disease ~ sbp + smoking,
 Once the model is fit we can look at the summary.
 
 
-```r
+``` r
 summary(framingham_model)
 #> Formula for model of interest: 
 #> disease ~ sbp + smoking
@@ -100,26 +100,26 @@ summary(framingham_model)
 #> 
 #> Fixed effects for model of interest: 
 #>                    mean        sd 0.025quant   0.5quant 0.975quant       mode
-#> beta.0       -2.3607112 0.2687679 -2.8893566 -2.3601356  -1.835308 -2.3601232
-#> beta.smoking  0.3989493 0.2976650 -0.1843516  0.3988021   0.983082  0.3987996
+#> beta.0       -2.3615605 0.2704869 -2.8934484 -2.3610451 -1.8325971 -2.3610396
+#> beta.smoking  0.3993941 0.2994675 -0.1875007  0.3992733  0.9869779  0.3992731
 #> 
 #> Coefficient for variable with measurement error and/or missingness: 
-#>              mean        sd 0.025quant 0.5quant 0.975quant     mode
-#> beta.sbp 1.904282 0.5619162  0.8468405 1.888489   3.057103 1.817615
+#>             mean        sd 0.025quant 0.5quant 0.975quant     mode
+#> beta.sbp 1.89742 0.5598976  0.8403958 1.882701   3.043096 1.817019
 #> 
 #> Fixed effects for imputation model: 
 #>                          mean         sd  0.025quant    0.5quant 0.975quant        mode
-#> alpha.sbp.0        0.01454299 0.01858129 -0.02190450  0.01454299 0.05099049  0.01454299
-#> alpha.sbp.smoking -0.01958477 0.02156261 -0.06188018 -0.01958477 0.02271064 -0.01958477
+#> alpha.sbp.0        0.01454298 0.01858279 -0.02190741  0.01454298 0.05099338  0.01454298
+#> alpha.sbp.smoking -0.01958476 0.02156436 -0.06188353 -0.01958476 0.02271401 -0.01958476
 #> 
 #> Model hyperparameters (apart from beta.sbp): 
 #>                                       mean       sd 0.025quant 0.5quant 0.975quant     mode
-#> Precision for sbp classical model 75.90183 3.690471   68.89250 75.81344   83.41963 75.63979
-#> Precision for sbp imp model       19.89457 1.234048   17.55069 19.86502   22.40737 19.82449
+#> Precision for sbp classical model 75.90183 3.690514   68.89237 75.81344   83.41967 75.63985
+#> Precision for sbp imp model       19.89455 1.234091   17.55057 19.86501   22.40742 19.82450
 ```
 
 
-```r
+``` r
 plot(framingham_model)
 ```
 
@@ -128,7 +128,7 @@ plot(framingham_model)
 For a comparison, we can also fit a "naive" model, that is, a model that ignores the measurement error in SBP. For this model, we will take an average of the two SBP measurements and use that as the SBP variable.
 
 
-```r
+``` r
 framingham$sbp <- (framingham$sbp1 + framingham$sbp2)/2
 naive_model <- inla(formula = disease ~ sbp + smoking,
                     family = "binomial", 
@@ -142,7 +142,7 @@ naive_model$summary.fixed
 Then we can compare the estimated coefficients from both models.
 
 
-```r
+``` r
 naive_result <- naive_model$summary.fixed
 rownames(naive_result) <- c("beta.0", "beta.sbp", "beta.smoking")
 naive_result$variable <- rownames(naive_result)
@@ -170,7 +170,7 @@ ggplot(results, aes(x = mean, y = model, color = variable)) +
 In this example, we artificially increase the measurement error for the smoking group in order to study a model with homoscedastic measurement error. The model in this example is identical to that in [Muff & Keller (2015)](https://doi.org/10.1002/bimj.201400157)
 
 
-```r
+``` r
 framingham2 <- framingham
 n <- nrow(framingham2)
 
@@ -188,12 +188,12 @@ framingham2$sbp2 <- framingham$sbp2 +
 ```
 
 
-```r
+``` r
 error_scaling <- c(1/(1+9*framingham2$smoking), 1/(1+9*framingham2$smoking))
 ```
 
 
-```r
+``` r
 # Homoscedastic ME modeled as homoscedastic ME (correct)
 framingham_model2.1 <- fit_inlamemi(formula_moi = disease ~ sbp:smoking,
                                formula_imp = sbp ~ smoking,
@@ -272,51 +272,65 @@ plot(framingham_model2.1)
 
 ![plot of chunk unnamed-chunk-11](figure/unnamed-chunk-11-1.png)
 
-```r
+``` r
 plot(framingham_model2.2)
 ```
 
 ![plot of chunk unnamed-chunk-11](figure/unnamed-chunk-11-2.png)
 
-```r
+``` r
 plot(framingham_model2.3)
 ```
 
 ![plot of chunk unnamed-chunk-11](figure/unnamed-chunk-11-3.png)
 
-```r
+``` r
 plot(framingham_model2.5)
 ```
 
 ![plot of chunk unnamed-chunk-11](figure/unnamed-chunk-11-4.png)
 
-```r
+``` r
 
 
 framingham_model2.1$summary.hyperpar
 #>                                                 mean       sd 0.025quant  0.5quant 0.975quant      mode
-#> Precision for the Gaussian observations[2] 75.924697 3.691755 68.9231297 75.832746  83.455384 75.644635
-#> Precision for the Gaussian observations[3] 19.898609 1.235568 17.5745308 19.861274  22.437435 19.788861
-#> Beta for beta.smokingsbp                   -1.581615 1.360291 -4.1917069 -1.604255   1.163213 -1.702103
-#> Beta for beta.sbp                           3.044022 1.187946  0.6632897  3.058256   5.340477  3.118959
+#> Precision for the Gaussian observations[2] 75.926745 3.691419 68.9229967 75.835774  83.453911 75.651639
+#> Precision for the Gaussian observations[3] 19.899106 1.235852 17.5768533 19.860949  22.440894 19.785229
+#> Beta for beta.smokingsbp                   -1.550385 1.368556 -4.1568580 -1.579337   1.229324 -1.706516
+#> Beta for beta.sbp                           3.018276 1.192594  0.6152684  3.036915   5.310360  3.117344
+```
+
+``` r
 framingham_model2.2$summary.hyperpar
-#>                                                  mean       sd 0.025quant   0.5quant 0.975quant         mode
-#> Precision for the Gaussian observations[2] 157.116140 7.218347 143.230428 157.003324 171.644168 156.89258604
-#> Precision for the Gaussian observations[3]  22.110110 1.647325  19.055748  22.045219  25.538246  21.90841768
-#> Beta for beta.smokingsbp                    -1.579268 1.872695  -5.994113  -1.309470   1.023051  -0.01175282
-#> Beta for beta.sbp                            3.445319 1.421107   1.447729   3.245299   6.784787   2.06839603
+#>                                                  mean       sd 0.025quant   0.5quant 0.975quant        mode
+#> Precision for the Gaussian observations[2] 157.132846 7.224567 143.347610 156.981638 171.786833 156.7113407
+#> Precision for the Gaussian observations[3]  22.107856 1.647459  19.052409  22.043246  25.535423  21.9076225
+#> Beta for beta.smokingsbp                    -1.321276 1.812718  -5.541954  -1.081464   1.323648   0.1774153
+#> Beta for beta.sbp                            3.475219 1.546659   1.236920   3.262221   7.082559   2.1712585
+```
+
+``` r
 framingham_model2.3$summary.hyperpar
 #>                                                 mean       sd 0.025quant  0.5quant 0.975quant      mode
-#> Precision for the Gaussian observations[2] 45.168891 2.194701 41.0375093 45.103655  49.676929 44.947917
-#> Precision for the Gaussian observations[3] 19.176318 1.276858 16.7852215 19.134095  21.810352 19.050388
-#> Beta for beta.smokingsbp                   -1.613992 1.410432 -4.1837629 -1.677446   1.350463 -1.977202
-#> Beta for beta.sbp                           3.277247 1.263836  0.6311494  3.330524   5.593007  3.580511
+#> Precision for the Gaussian observations[2] 45.173090 2.188453 40.9850002 45.131480  49.599358 45.072754
+#> Precision for the Gaussian observations[3] 19.188177 1.278490 16.8159894 19.138396  21.847723 19.023909
+#> Beta for beta.smokingsbp                   -1.556081 1.567443 -4.3841723 -1.633877   1.760159 -2.006828
+#> Beta for beta.sbp                           3.224484 1.369344  0.3427539  3.287009   5.715341  3.584224
+```
+
+``` r
 framingham_model2.5$summary.hyperpar
-#>                                                    mean         sd  0.025quant     0.5quant  0.975quant         mode
-#> Precision for the Gaussian observations[2] 7.411261e+02 27.2248319 688.7987773 7.406866e+02 795.9767592 7.399389e+02
-#> Precision for the Gaussian observations[3] 1.012029e+01  3.2274084   5.0628791 9.692601e+00  17.6274785 8.911691e+00
-#> Beta for beta.smokingsbp                   4.336929e-04  0.2996034  -0.5895143 4.765140e-04   0.5901333 6.533428e-04
-#> Beta for beta.sbp                          4.231469e-04  0.2821837  -0.5552294 4.654132e-04   0.5558305 6.399530e-04
+#>                                                    mean         sd  0.025quant     0.5quant  0.975quant
+#> Precision for the Gaussian observations[2] 7.411258e+02 27.2247363 688.7973955 7.406868e+02 795.9749930
+#> Precision for the Gaussian observations[3] 1.012133e+01  3.2153919   5.0781874 9.696652e+00  17.5970850
+#> Beta for beta.smokingsbp                   4.122008e-04  0.2990914  -0.5888122 5.530046e-04   0.5888194
+#> Beta for beta.sbp                          5.987715e-04  0.2823957  -0.5553716 6.067459e-04   0.5565229
+#>                                                    mode
+#> Precision for the Gaussian observations[2] 7.399408e+02
+#> Precision for the Gaussian observations[3] 8.921509e+00
+#> Beta for beta.smokingsbp                   1.134864e-03
+#> Beta for beta.sbp                          6.396683e-04
 ```
 
 
